add seccion acercademi

--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
     
 </head>
 <body>
-    
+    <h1>Martin Varo Rodriguez</h1>
+    <div id="Acercademi">
+        <h2>Acerca de mi</h2>
+        <p>Estudiante de Ingeniería en Computación en el Centro Universitario
+            de Ciencias Exactas e Ingenierías, actualmente docente de primaria 
+            egresado en el 2015 de la Normal de Jalisco. Persona con entusiasmo 
+            y motivación por seguirse superando, con gustos por los videojuegos, 
+            el deporte y por el turismo nacional.</p>
+    </div>  
 </body>
 </html>
