add conocimientos y fortalezas

--- a/index.html
+++ b/index.html
@@ -16,6 +16,27 @@
             egresado en el 2015 de la Normal de Jalisco. Persona con entusiasmo 
             y motivación por seguirse superando, con gustos por los videojuegos, 
             el deporte y por el turismo nacional.</p>
-    </div>  
+    </div>
+
+    <div id="Conocimientos">
+        <h2>Mis conocimientos</h2>
+        <ul>
+            <li>Dominio intermedio de C++</li>
+            <li>Dominio basico de Python</li>
+            <li>Uso de MySQL</li>
+            <li>Docencia en nivel primaria</li>
+            <li>Planes y programas SEP</li>
+        </ul>
+    </div>
+
+    <div id="Fortalezas">
+        <h2>Mis fortalezas</h2>
+        <ol>
+            <li>Responsable</li>
+            <li>Creativo</li>
+            <li>Persistente</li>
+        </ol>
+    </div>
+    
 </body>
 </html>
