--- a/index.html
+++ b/index.html
@@ -37,6 +37,41 @@
             <li>Persistente</li>
         </ol>
     </div>
-    
+
+    <div id="Proyectos">
+        <h2>Mis proyectos</h2>
+        <table class="table">
+        <thead class="thead-dark">
+            <tr>
+            <th scope="col">#</th>
+            <th scope="col">Nombre del proyecto</th>
+            <th scope="col">Lenguajes</th>
+            <th scope="col">Descripción</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+            <th scope="row">1</th>
+            <td>Arbol AVL</td>
+            <td>C++</td>
+            <td>Desarrollo de un arbol AVL meidante clases y objetos</td>
+            </tr>
+            <tr>
+            <th scope="row">2</th>
+            <td>Control Escolar</td>
+            <td>C#</td>
+            <td>Uso de bases de datos (MySQL) para la implementacion de un control escolar el cual puede ser manipulado mediante una interfaz grafica.</td>
+            </tr>
+            <tr>
+            <th scope="row">3</th>
+            <td>Algoritmos Voraces</td>
+            <td>Python</td>
+            <td>Programacion e implementacion de los algoritmos de Prim, Kruskal y Dijkstra</td>
+            </tr>
+        </tbody>
+        </table>
+    </div>
+
+
 </body>
 </html>
